--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
     sdk: flutter
 
   provider: ^6.0.5
+  shared_preferences: ^2.0.15
+  system_theme: ^2.0.0
+  intl: ^0.17.0
+  material_segmented_control: ^4.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
