--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,10 @@ dependencies:
     material_segmented_control: ^4.0.0
     url_launcher: ^6.1.7
     flutter_animate: ^2.0.1
-    #just_audio: ^0.9.30
+    just_audio: ^0.9.30
     flutter_share: ^2.0.0
-    audioplayers: ^1.1.1
+    tapsell_plus: ^2.1.7
+    #audioplayers: ^1.1.1
     # The following adds the Cupertino Icons font to your application.
     # Use with the CupertinoIcons class for iOS style icons.
     cupertino_icons: ^1.0.2
@@ -100,3 +101,21 @@ flutter:
     #
     # For details regarding fonts from package dependencies,
     # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/icons/icon.png"
+    background_color: "#8e8f91"
+    theme_color: "#8e8f91"
+  windows:
+    generate: true
+    image_path: "assets/icons/icon.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/icons/icon.png"
