--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
 
     provider: ^6.0.5
     shared_preferences: ^2.0.15
-    system_theme: ^2.0.0
-    intl: ^0.17.0
+    #system_theme: ^2.0.0
+    #intl: ^0.17.0
     material_segmented_control: ^4.0.0
     url_launcher: ^6.1.7
     flutter_animate: ^2.0.1
@@ -45,7 +45,7 @@ dependencies:
     #audioplayers: ^1.1.1
     # The following adds the Cupertino Icons font to your application.
     # Use with the CupertinoIcons class for iOS style icons.
-    cupertino_icons: ^1.0.2
+    #cupertino_icons: ^1.0.2
 
 dev_dependencies:
     flutter_test:
